added lorem ipsum to bio

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Student Bio</h1>
     <h2>Gabriel Viveros-Goldammer</h2>
     <img src="images/gabriel.JPG" alt="Gabriel" style="width:200px;">
-    <p>This is my bio that will be pushed to Github! This should go swimmingly of course!</p>
+    <p>This is my bio that will be pushed to Github! This should go swimmingly of course! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae dolor delectus quos, officiis excepturi voluptatum, corporis cupiditate quam esse aperiam enim dolore consequatur harum expedita? Nam rem labore illo ratione.</p>
     
     <h2>Contact Info</h2>
     <ul>
